--- a/BluetoothGraphing/Forms/mainwindow.ui
+++ b/BluetoothGraphing/Forms/mainwindow.ui
@@ -19,20 +19,22 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <layout class="QHBoxLayout" name="layout">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="sizeConstraint">
        <enum>QLayout::SetNoConstraint</enum>
       </property>
       <item>
-       <layout class="QVBoxLayout" name="posteriorLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QwtPlot" name="posteriorX">
+         <widget class="QwtPlot" name="anteriorX">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
+          <zorder>anteriorZ</zorder>
+          <zorder>anteriorZ</zorder>
          </widget>
         </item>
         <item>
@@ -46,7 +48,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QwtPlot" name="posteriorZ">
+         <widget class="QwtPlot" name="posteriorX">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
@@ -58,9 +60,9 @@
        </layout>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="anteriorLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QwtPlot" name="anteriorX">
+         <widget class="QwtPlot" name="anteriorZ">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
@@ -80,7 +82,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QwtPlot" name="anteriorZ">
+         <widget class="QwtPlot" name="posteriorZ">
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
